kb: add java fundamentals, oop principles, jvm internals, gc algorithms, multithreading topics